# llm-protected-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  security.py
app/api/: auth.py  chat.py  users.py
app/models/: chat.py  user.py
app/schemas/: chat.py  user.py
app/services/: chat_service.py  openrouter_service.py
